get env from Tango DB, better docs, panel descriptions bugs solved

--- a/vacca/default.py.ini
+++ b/vacca/default.py.ini
@@ -34,22 +34,26 @@ use default.py for your common options and whatever.py for your in-place customi
 """
 
 import os,fandango,imp,vacca.utils
-from fandango import matchCl,searchCl,replaceCl,CaselessDict,CaselessList,get_matching_devices,get_matching_attributes
+from taurus.qt.qtgui.button import TaurusLauncherButton
+from vacca.utils import *
+from fandango import matchCl,searchCl,replaceCl,CaselessDict,CaselessList,\
+    get_matching_devices,get_matching_attributes,get_all_devices
 
-print '>'*20+' Loading Default.py'
+print '>'*20+' Loading default.py.ini'
 
 #ALL these variables can be re-defined in CONFIG FILE
 GUI_NAME = 'VACCA'
-WDIR = vacca.utils.WORKING_DIR #imp.find_module('vacca')[1]+'/'
-URL_HELP = 'http://www.tango-controls.org/Members/srubio/vacca'
+WDIR = VACCA_DIR #imp.find_module('vacca')[1]+'/'
+URL_HELP = 'http://computing.cells.es/services/controls/vacuum'
 URL_LOGBOOK = 'http://logbook.cells.es/'
-VACCA_LOGO = WDIR+'image/icons/nggshow.php.png'
+VACCA_LOGO = vpath('image/icons/nggshow.php.png')
+ORGANIZATION = 'VACCA'
 ORGANIZATION_LOGO = WDIR+'image/icons/AlbaLogo.png'
 
 ###############################################################################
 # Synoptic file
 
-JDRAW_FILE = '' #WDIR+'%s/%s.jdw'%(TARGET,TARGET)
+JDRAW_FILE = '' #WDIR+'/examples/elinac/linac.jdw' #WDIR+'%s/%s.jdw'%(TARGET,TARGET)
 #Enables/disables loading jdraw objects into tree
 JDRAW_TREE = True 
 #A method that does transformation on signals sent to other widgets.
@@ -62,15 +66,16 @@ JDRAW_HOOK = None #lambda s: apply_transform(get_coordinates(s))
 # Setup of the tree
 
 #Domain/Target used to generate grids/trees ; domain may be regexp, target should not
-DOMAIN = 'BL*'
+DOMAIN = '*test*'
 TARGET = DOMAIN
 USE_DEVICE_TREE = True
 
 #Devices not in JDraw or regular expression to be added to the tree
-EXTRA_DEVICES = [DEVICE] #map(bool,set(['%s/VC/ALL'%TARGET,'%s/CT/ALARMS'%TARGET,DEVICE,COMPOSER]))
+EXTRA_DEVICES = get_all_devices(exported=True) #map(bool,set(['%s/VC/ALL'%TARGET,'%s/CT/ALARMS'%TARGET,DEVICE,COMPOSER]))
 
 #Custom tree branches are built using nested dictionaries and regular expressions (if empty a jive-like tree is built).
 CUSTOM_TREE = {} 
+
 # {'CT':'BL*(CT|ALARMS|PLC)$',
 #  'FE':'FE*/VC/*',
 #  'Valves': {'.OH':'*OH/PNV*',
@@ -84,7 +89,7 @@ CUSTOM_TREE = {}
 COMPOSER = '' #'%s/vc/all'%DOMAIN
 
 #Default device to appear in the DevicePanel
-DEVICE = 'sys/tg_test/1'
+DEVICE = None # 'sys/tg_test/1' ; tg_test caused segfault in some cases!?
 USE_DEVICE_PANEL = True
 PANEL_COMMAND = 'taurusdevicepanel --config-file='+WDIR+'default.py'
 
@@ -94,7 +99,7 @@ AttributeFilters['EPS']=[ #You can distribute attributes in different tabs using
     ('Status',['_READY','OPEN_','CLOSE_']),
     ('Signals',['.*_PT.*','was_','paas_','*RGA*']),
     ]
-CommandFilters = {'V-PEN': (('on',()),('off',())),('setMode',('START','PROTECT')),} #Second argument of tuple is the list of default arguments
+CommandFilters = {'V-PEN': (('on',()),('off',()),('setMode',('START','PROTECT'))),} #Second argument of tuple is the list of default arguments
 IconMap = {'v-pen':WDIR+'image/equips/icon-pen.gif'} #Will be used in both panel and tree
 
 ## Optional:
@@ -105,7 +110,7 @@ IconMap = {'v-pen':WDIR+'image/equips/icon-pen.gif'} #Will be used in both panel
 ###############################################################################
 # Plot setup
 
-#Pressure values to be added to the trend
+#Pressure values to be added to the logaritmic trend
 GAUGES = [] #['bl13/vc/vgct-01/p1','bl13/vc/vgct-01/p2'] 
 #sorted(fandango.get_matching_attributes('%s/*/vgct*/p[12]'%DOMAIN.replace('BL','(BL|FE|ID)')))
 
@@ -117,13 +122,23 @@ GRID = {
     'column_labels': '',
     'delayed': False,
     'frames': False,
-    'model': ['%s/VC/(IPCT|VGCT|CCGX)*/(P[12]|Pressure|State)$'%DOMAIN,'%s/V-[^/]*/[0-9]*/(Pressure|State)'%DOMAIN],
+    'model': [], 
+    #'%s/VC/(IPCT|VGCT|CCGX)*/(P[12]|Pressure|State)$'%DOMAIN,'%s/V-[^/]*/[0-9]*/(Pressure|State)'%DOMAIN],
     'row_labels':'VcGauges(mbar):(VGCT|PEN), IonPumps(mbar):(IPCT|VARIP)',
     }
 
 #Extra widgets to appear in the NewPanel dialog
-EXTRA_WIDGETS = [] #('vacca.VacuumProfile',WDIR+'image/ProfilePlot.jpg'),
-EXTRA_PANELS = [] #('vacca.VacuumProfile',WDIR+'image/ProfilePlot.jpg'),
+EXTRA_WIDGETS = [
+        ('panic.gui.AlarmGUI',wdir('vacca/image/icons/panic.gif')),
+        ('PyTangoArchiving.widget.ArchivingBrowser.ArchivingBrowser',wdir('vacca/image/widgets/Archiving.png')),
+    ] #('vacca.VacuumProfile',WDIR+'image/ProfilePlot.jpg'),
+
+EXTRA_PANELS = {}
+from taurus.qt.qtgui.taurusgui.utils import PanelDescription
+#EXTRA_PANELS['PANIC'] = PanelDescription(
+    #'PANIC','panic.gui.AlarmGUI',model='',#---
+    #sharedDataWrite={'HighlightInstruments':'devicesSelected'})
+
 TOOLBARS = [] #[(name,modulename.classname)]
 
 #===============================================================================
@@ -134,11 +149,11 @@ TOOLBARS = [] #[(name,modulename.classname)]
 
 from taurus.qt.qtgui.taurusgui.utils import PanelDescription, ExternalApp, ToolBarDescription, AppletDescription
 
-xvacca = ExternalApp(cmdargs=['konqueror',URL_HELP], text="Alba VACuum Controls Application", icon=WDIR+'image/icons/cow-tux.png')
+xvacca = ExternalApp(cmdargs=['konqueror',URL_HELP], text="Alba VACuum Controls Application", icon=WDIR+'/image/icons/cow-tux.png')
 xtrend = ExternalApp(cmdargs=['taurustrend','-a'], text="TaurusTrend")
-xjive = ExternalApp(cmdargs=['jive'], text="Jive")#, icon=WDIR+'image/icons/cow-tux.png')
-xastor = ExternalApp(cmdargs=['astor'], text="Astor")#, icon=WDIR+'image/icons/cow-tux.png')
-#logbook = ExternalApp(cmdargs=['konqueror %s'%URL_LOGBOOK], text="Logbook", icon=WDIR+"image/icons/elog.png")
+xjive = ExternalApp(cmdargs=['jive'], text="Jive")#, icon=WDIR+'/image/icons/cow-tux.png')
+xastor = ExternalApp(cmdargs=['astor'], text="Astor")#, icon=WDIR+'/image/icons/cow-tux.png')
+#logbook = ExternalApp(cmdargs=['konqueror %s'%URL_LOGBOOK], text="Logbook", icon=WDIR+"/image/icons/elog.png")
 
 #===============================================================================
 # Define custom applets to be shown in the applets bar (the wide bar that
@@ -155,9 +170,28 @@ xastor = ExternalApp(cmdargs=['astor'], text="Astor")#, icon=WDIR+'image/icons/c
 EXTRA_APPS = {
     #'xrga':{'name':'RGA','classname':'VaccaAction','model':['RGA',WDIR+'image/equips/icon-rga.gif']+['rdesktop -g 1440x880 ctrga01']}
     }
+EXTRA_APPS['Properties'] = {'class' : vacca.VaccaPropTable}
+#EXTRA_APPS['DevicePanel'] = {'class' : vacca.VaccaPanel}
+#EXTRA_APPS['Panic']= {'class' : vacca.VaccaPanic       }
+#EXTRA_APPS['ExtraDock']= {'class' : Qt.QMainWindow       }    
     
-#from vacca.panel import VaccaAction
+from vacca.panel import VaccaAction
     
-xmambo = AppletDescription('Mambo',classname = 'vacca.panel.VaccaAction',model=["Archiving",WDIR+'image/icons/Mambo-icon.png','mambo'],)
-xalarms = AppletDescription('Alarms',classname='vacca.panel.VaccaAction',model=['Alarms',WDIR+'image/icons/panic.gif','panic'])
-xsnap = AppletDescription('xSnap',classname='vacca.panel.VaccaAction',model=['Snap',WDIR+'image/icons/Crystal_Clear_app_kedit.png','ctsnaps'])
+#xmambo = AppletDescription('Mambo',classname = 'vacca.panel.VaccaAction',
+# model=["Archiving",wdir('vacca/image/widgets/ProfilePlot.png'),'mambo'],)
+#xalarms = AppletDescription('Alarms',classname='vacca.panel.VaccaNewPanel',
+# model=['Alarms',wdir('vacca/image/icons/panic.gif'),'panic.gui.AlarmGUI'])
+xsnap = AppletDescription('xSnap',classname='vacca.panel.VaccaAction', model=['Snap',vpath('image/widgets/VerticalGrid.jpg'),'ctsnaps'])
+xfinder = AppletDescription('xFinder',classname='vacca.panel.VaccaAction', model=['Attribute Finder',':actions/system-search.svg','ctfinder'])
+
+
+#button =  TaurusLauncherButton(widget =
+#
+# vacca.properties.VaccaPropTable.getPanelDescription('Properties2'))
+#prop = AppletDescription('proper',
+#                         classname='vacca.properties.VaccaPropTable',
+#                         modulename='getPanelDescription',)
+#button.setModel('a/b/c') #a device name, which will be given to the
+# TaurusAttrForm when clicking
+
+__doc__ = vacca.get_autodoc(__name__,vars())
