--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,6 @@ include LICENSE
 include README
 include vacca/VERSION
 include vacca/CHANGES
+
+
+recursive-include vacca *.ini *.jpg *.png *.PNG *.JPG *.qrc *.gif
