--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,10 +2,10 @@
 
 include AUTHORS
 include LICENSE
-include README
+include README.rst
 include bin/ctvc
 include vacca/VERSION
 include vacca/CHANGES
 include vacca/legacy/ui/TaurusDevPanel.ui
 
-recursive-include vacca *.ini *.jpg *.png *.PNG *.JPG *.qrc *.gif
+recursive-include vacca *.ini *.jpg *.png *.PNG *.JPG *.qrc *.gif *.py *.ico
